Doc: Update readme
Feat: Atoms/Icon Replacing spinner with custom spinner icon
Feat: Atoms/Layout revamp row, col to manage spacing and section management
Feat: Atoms/FileInput set progress bar and file size as enabled by default
Feat: Atoms/DynamicSearchInput enable initial search with no value typed
Feat: Atoms/DynamicSearchCreatableInput enable initial search with no value typed
Feat: Atoms/FileField set progress bar and file size as enabled by default
Feat: Organisms/Filter introduce the title and column to replace the section filtertype to get more flexibility

Fix: Atoms/Checkbox remove padding bottom on the last label o the list
Fix: Atoms/FileInput update gallery hover color
Fix: Atoms/TextAreaInput remove initial size which was varying at the first key stroke
Fix: Atoms/RichTextInput remove h4 h5 h6, adjust font sizes from 10px to 22px, adjust the min height to 250px

--- a/src/assets/_checkbox.scss
+++ b/src/assets/_checkbox.scss
@@ -31,6 +31,10 @@
     cursor: pointer;
     user-select: none;
 
+    &:last-child {
+      padding-bottom: 0px;
+    }
+
     .checkbox-marker {
       padding-right: 8px;
     }
