--- a/src/assets/_file.scss
+++ b/src/assets/_file.scss
@@ -75,20 +75,31 @@
 
           &.downloadable {
             cursor: pointer;
+
             &:hover {
               text-decoration: underline;
             }
           }
+        }
+
+        .spinner-icon {
+          visibility: visible;
         }
       }
 
       .right {
         display: flex;
         flex-direction: row;
+
+        .spinner-icon {
+          visibility: visible;
+        }
+
         .delete-icon {
           visibility: visible;
           cursor: pointer;
         }
+
         progress {
           border: 1px solid $silver;
           margin: auto 8px;
@@ -96,12 +107,15 @@
           height: 10px;
           color: $primary;
           background-color: $chalk;
+
           &::-moz-progress-bar {
             background: $chalk;
           }
+
           &::-webkit-progress-value {
             background: $primary;
           }
+
           &::-webkit-progress-bar {
             background: $chalk;
           }
