Feat: Atoms/CheckboxInput give tabing access to the checkbox Feat: Atoms/FileInput give tabing access to the file upload Feat: Atoms/SwitchInput give tabing access to the switch
Fix: Atoms/Checkbox centering the checboxes when inline
Fix: Fields removing overflow
Fix: Atoms/RichTextInput removing zindex for the wrapper and toolbar, and hidding the sticky toolbar

Test: Organisms/Form testing form, highlighter, yup resolver and form field

--- a/src/assets/_checkbox.scss
+++ b/src/assets/_checkbox.scss
@@ -15,6 +15,7 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       padding-bottom: 0px;
+      margin: auto 0px;
 
       .checkbox-marker {
         display: inline;
@@ -26,13 +27,13 @@
 
   label {
     display: inline-flex;
-    padding-bottom: 8px;
+    margin-bottom: 8px;
     width: fit-content;
     cursor: pointer;
     user-select: none;
 
     &:last-child {
-      padding-bottom: 0px;
+      margin-bottom: 0px;
     }
 
     .checkbox-marker {
