--- a/src/assets/_filter.scss
+++ b/src/assets/_filter.scss
@@ -8,7 +8,7 @@
       display: flex;
       flex-direction: row;
       gap: 8px;
-      flex-grow: 1;
+      flex: 1 1;
     }
 
     .search-actions {
