Fix: Adding missing css peer-depedencies Fix: CSS justify-content:end => justify-content:flex-end Fix: CSS height: fill-available => height: stretch

--- a/src/assets/_sidebar.scss
+++ b/src/assets/_sidebar.scss
@@ -171,14 +171,10 @@ $width: 270px;
 // Special demo case
 .gds-sidebar-container.unfixed {
   position: relative;
-  height: -moz-available;
-  height: -webkit-fill-available;
-  height: fill-available;
+  height: stretch;
 
   .mainmenu,
   .submenu {
-    height: -moz-available;
-    height: -webkit-fill-available;
-    height: fill-available;
+    height: stretch;
   }
 }
