--- a/src/assets/_actionbar.scss
+++ b/src/assets/_actionbar.scss
@@ -100,8 +100,7 @@
   .right-side {
     display: flex;
     flex-direction: row;
-    justify-content: end;
-    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
 
     .actions {
       display: flex;
