--- a/src/assets/_modal.scss
+++ b/src/assets/_modal.scss
@@ -59,8 +59,7 @@
       border-top: 1px solid $chalk;
       display: flex;
       flex-direction: row;
-      justify-content: end;
-      -webkit-justify-content: flex-end;
+      justify-content: flex-end;
 
       & > * {
         margin: auto 4px;
