--- a/src/assets/_popover.scss
+++ b/src/assets/_popover.scss
@@ -13,8 +13,7 @@
   .popover-buttons {
     display: flex;
     flex-direction: row;
-    justify-content: end;
-    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
 
     & > * {
       margin: auto 4px;
