Fix: third party css import url

--- a/src/assets/_datapicker.scss
+++ b/src/assets/_datapicker.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 $datepicker__background-color: $chalk !default;
 $datepicker__border-color: $chalk !default;
 $datepicker__highlighted-color: $primary !default;
