--- a/src/assets/_richtext.scss
+++ b/src/assets/_richtext.scss
@@ -1,4 +1,4 @@
-@import '~suneditor/dist/css/suneditor.min.css';
+@import 'suneditor/dist/css/suneditor.min.css';
 
 .gds-rich-text-container {
   // Removing z-index to get the model over the rich text
