Feat: Atoms/FileInput Adding popover for deletion of uploaded files (but not for in error files) Feat: Atoms/FileInput Adding translation for error message and deletion confirmation Feat: Atoms/FileField Adding popover for deletion of uploaded files (but not for in error files) Feat: Atoms/FileField Adding translation for error message and deletion confirmation Feat: Organisms/Form Adding translation for FileField used in form

--- a/src/assets/_file.scss
+++ b/src/assets/_file.scss
@@ -97,7 +97,10 @@
 
         .delete-icon {
           visibility: visible;
-          cursor: pointer;
+          height: unset;
+          &:hover {
+            background-color: unset;
+          }
         }
 
         progress {
