Fix: Atoms/Section use react-collapsed to support the dynamic sizing of the content

--- a/src/assets/_layout.scss
+++ b/src/assets/_layout.scss
@@ -37,7 +37,7 @@
 
     .collapse-icon {
       transform: rotate(-90deg);
-      transition: transform 0.5s linear;
+      transition: transform 500ms linear;
       margin: auto 0px;
       &.open {
         transform: rotate(90deg);
