Fix: Organisms/SideBar adjust margin-left from 20px to 10px for items Fix: Organisms/SideBar adjust default sideBar width from 270px to 250px

--- a/src/assets/_sidebar.scss
+++ b/src/assets/_sidebar.scss
@@ -40,7 +40,7 @@
 
     .label {
       display: flex;
-      padding: 0px 10px 0px 20px;
+      padding: 0px 10px 0px 10px;
     }
 
     a {
@@ -51,7 +51,7 @@
       color: unset;
 
       .external-link {
-        margin: auto 10px auto 0px;
+        margin: auto 10px;
       }
 
       .chevron-right {
