Fix: Organisms/NavBar forcing the icon to fit with a max height of 44px

--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -17,6 +17,10 @@
   .nav-bar-brand {
     margin: 10px;
     height: 44px;
+
+    .nav-bar-brand-image {
+      max-height: 44px;
+    }
   }
 
   .nav-bar-items-container {
