--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -43,6 +43,10 @@
           transform: translateX(12px) translateY(10px);
         }
 
+        a {
+          all: unset;
+        }
+
         &:hover {
           color: $primary;
           cursor: pointer;
