Fix: Molecules/Button Remove style for links inside menu Fix: Organisms/Navbar Ensure links are centered

--- a/src/assets/_button.scss
+++ b/src/assets/_button.scss
@@ -112,6 +112,10 @@
   position: absolute;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #fff;
+  a {
+    all: unset;
+    text-decoration: none;
+  }
 }
 .szh-menu:focus {
   outline: none;
