--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -15,11 +15,17 @@
   user-select: none;
 
   .nav-bar-brand {
-    margin: 10px;
-    height: 44px;
+    margin: 10px 10px 10px 20px;
+    height: auto;
+
+    a {
+      all: unset;
+      display: flex;
+      align-items: center;
+    }
 
     .nav-bar-brand-image {
-      max-height: 44px;
+      max-height: 22px;
     }
   }
 
