FIx: Organisms/ActionBar Extending the width for title Fix: Organisms/ActionBar Make the whole item in menu clickable (not only the text)

--- a/src/assets/_button.scss
+++ b/src/assets/_button.scss
@@ -113,7 +113,7 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #fff;
   a {
-    all: unset;
+    font-weight: unset;
     text-decoration: none;
   }
 }
