Fix: Organisms/ActionBar set height of primary bar to 64px

--- a/src/assets/_actionbar.scss
+++ b/src/assets/_actionbar.scss
@@ -25,6 +25,7 @@
     position: sticky;
     box-sizing: border-box;
     box-shadow: 0px 4px 10px color.change($charcoal, $alpha: 0.1);
+    height: 64px;
   }
 
   .left-side {
