--- a/src/assets/_actionbar.scss
+++ b/src/assets/_actionbar.scss
@@ -67,6 +67,7 @@
         border: 1px solid transparent;
         z-index: -1;
         border-radius: 4px;
+        user-select: none;
       }
 
       .title-edit {
