Fix: Molecules/RichTextField Remove padding in readonly and disabled Fix: Organisms/useForm remove strict from yup validation

--- a/src/assets/_richtext.scss
+++ b/src/assets/_richtext.scss
@@ -85,4 +85,12 @@
       display: none !important;
     }
   }
+
+  // Remove margin for richtext editor when in readonly
+  &.readonly,
+  &.disabled {
+    .sun-editor-editable {
+      padding: unset;
+    }
+  }
 }
