Feat: Molecules/Button show default cursor on disabled button Feat: Molecules/Button prevent menu interactions when the button is disabled Feat: Atoms/FileInput show a - when in ready only without any uploaded files

--- a/src/assets/_button.scss
+++ b/src/assets/_button.scss
@@ -24,6 +24,7 @@
       }
     }
     &:disabled {
+      cursor: default;
       background-color: $silver;
     }
   }
@@ -43,6 +44,7 @@
       }
     }
     &:disabled {
+      cursor: default;
       background-color: $silver;
     }
   }
@@ -63,6 +65,7 @@
       }
     }
     &:disabled {
+      cursor: default;
       color: $silver;
     }
   }
