--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -14,6 +14,7 @@
 @import './modal';
 @import './navbar';
 @import './pulsar';
+@import './portfolio';
 @import './popover';
 @import './richtext';
 @import './select';
