--- a/src/assets/_datatable.scss
+++ b/src/assets/_datatable.scss
@@ -129,7 +129,12 @@
 
   thead > tr > th {
     padding: 8px 12px;
-    border-bottom: 1px solid $chalk;
+    box-shadow: inset 0 -1px 0 $chalk;
+    background-color: $white;
+    &.sticky {
+      position: sticky;
+      top: 0;
+    }
 
     &.table--header--selectable {
       padding: auto 2px;
