feat: add basic toaster config

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -22,5 +22,6 @@
 @import './switch';
 @import './textarea';
 @import './textinput';
+@import './toaster';
 @import './tooltip';
 @import './typography';
