Fix: Molecules/Toaster cleanup scss Feat: Molecules/Toaster add ability to dismiss a toaster or all toasters Test: Molecules/Toaster add coverage to component and methods Doc: Molecules/Toaster improve documentation layout

--- a/src/assets/_toaster.scss
+++ b/src/assets/_toaster.scss
@@ -1,8 +1,4 @@
-.persistent-toast-content {
-  display: flex;
-}
-
-.toast-close-icon {
+.gds-toaster-close-icon {
   cursor: pointer;
   margin: auto auto auto 10px;
 }
