Fix: Template/Portfolio css margin

--- a/src/assets/_portfolio.scss
+++ b/src/assets/_portfolio.scss
@@ -1,13 +1,17 @@
 .gds-portfolio {
-  padding: 0px 20px;
   display: flex;
   flex-direction: column;
   flex: 1 1;
 
   .gds-portfolio-filter {
+    padding: 0px 20px;
     height: 64px;
     align-items: center;
     justify-content: center;
     display: flex;
+  }
+
+  .gds-portfolio-table {
+    padding: 0px 20px;
   }
 }
