--- a/src/assets/_toaster.scss
+++ b/src/assets/_toaster.scss
@@ -1,4 +1,10 @@
+.gds-toaster {
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  max-width: 50%;
+}
+
 .gds-toaster-close-icon {
   cursor: pointer;
-  margin: auto auto auto 10px;
+  margin: auto 0px auto 10px;
+  vertical-align: middle;
 }
