Breaking change: Atoms/Container suppression
Doc: update storybook plugin order
Fix: Atom/Section allow size adjustment even in non collapsible mode
Fix: Atom/SelectInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Atom/MultiSelectInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Atom/DynamicSearchInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Atom/DynamicSearchCreatableInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Molecule/Toaster minor css fixes
Fix: Organism/ActionBar use Arial, Helvetica for the dynamically sized input (as other font are very badly supported)
Fix: Template/Portfolio fix side spacing

--- a/src/Components/Organisms/ActionBar/Title.module.scss
+++ b/src/Components/Organisms/ActionBar/Title.module.scss
@@ -7,20 +7,23 @@
 .entity,
 .suffix {
   border: 1px solid transparent;
-  margin-left: 2px;
-  margin-right: 2px;
+  margin: auto 2px;
 }
 
 .hiddenTitle {
+  font-family: Arial, Helvetica, sans-serif !important;
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid transparent;
+  box-sizing: border-box;
   color: transparent;
   display: inline-flex;
+  font-family: 'Arial';
   font-size: 22px;
   margin: auto 2px;
   outline: none;
   overflow: hidden;
+  padding: 1px 2px;
   position: absolute;
   text-overflow: ellipsis;
   text-transform: uppercase;
@@ -30,14 +33,18 @@
 }
 
 .title {
+  font-family: Arial, Helvetica, sans-serif !important;
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid transparent;
+  box-sizing: border-box;
   display: inline-flex;
+  font-family: var(--theme-provider-font-family);
   font-size: 22px;
   margin: auto 2px;
   outline: none;
   overflow: hidden;
+  padding: 1px 2px;
   text-overflow: ellipsis;
   text-transform: uppercase;
   white-space: nowrap;
