--- a/src/Components/Templates/Portfolio/PortfolioWrapped.module.scss
+++ b/src/Components/Templates/Portfolio/PortfolioWrapped.module.scss
@@ -3,10 +3,12 @@
   align-items: center;
   justify-content: center;
   display: flex;
+  padding: 0px 20px;
 }
 
 .table {
   display: flex;
+  padding: 0px 20px;
 }
 
 .ref {
