--- a/src/Components/Organisms/ActionBar/Actionbar.module.scss
+++ b/src/Components/Organisms/ActionBar/Actionbar.module.scss
@@ -12,6 +12,7 @@
   box-sizing: border-box;
   box-shadow: 0px 4px 10px rgba(var(--theme-provider-black), 0.1);
   height: 64px;
+  margin-bottom: 10px;
 }
 
 .secondary {
