Build: Remove default font from package, as it is provided by Google
Doc: Update theme to dark
Doc: Atom/Icon listing all icons and name variations

Feat: Atom/DatePickerInput add box shadow to the popper
Feat: Atom/SelectInput add box shadow to the popper
Feat: Atom/MultiSelectInput add box shadow to the popper
Feat: Atom/DynamicSearchCreatableInput add box shadow to the popper
Feat: Atom/DynamicSearchInput add box shadow to the popper

--- a/src/Components/Atoms/DatePickerInput/DatePickerInput.module.scss
+++ b/src/Components/Atoms/DatePickerInput/DatePickerInput.module.scss
@@ -27,6 +27,7 @@
     color: $datepicker__text-color;
     border: 1px solid $datepicker__border-color;
     border-radius: $datepicker__border-radius;
+    box-shadow: 0px 2px 10px 0px rgba(var(--theme-provider-black), 0.25);
     display: inline-block;
     position: relative;
   }
