--- a/src/Components/Molecules/Toaster/Toaster.module.scss
+++ b/src/Components/Molecules/Toaster/Toaster.module.scss
@@ -1,6 +1,6 @@
 .container {
   max-width: 50%;
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 10px 0px rgba(var(--theme-provider-black), 0.25);
 }
 
 .icon {
