Fix: Atom/SelectInput remove select-portal-id when portal is in used Fix: Atom/MultiSelectInput remove select-portal-id when portal is in used Fix: Atom/DynamicSearchInput remove select-portal-id when portal is in used Fix: Atom/DynamicSearchCreatableInput remove select-portal-id when portal is in used
Doc: Remove datatTestId from documentation

--- a/src/Components/Atoms/DatePickerInput/DatePickerInput.module.scss
+++ b/src/Components/Atoms/DatePickerInput/DatePickerInput.module.scss
@@ -1,3 +1,8 @@
+.container {
+  display: flex;
+  flex: 1;
+}
+
 :global {
   $datepicker__background-color: rgb(var(--theme-provider-chalk)) !default;
   $datepicker__border-color: rgb(var(--theme-provider-chalk)) !default;
