Feat: Molecule/Banner new features Feat: Atom/Color adding skyhigh color

--- a/src/Components/Atoms/Colors/variables.module.scss
+++ b/src/Components/Atoms/Colors/variables.module.scss
@@ -14,6 +14,7 @@
   secondary: $secondary;
   silver: $silver;
   sky: $sky;
+  skyhigh: $skyhigh;
   smoke: $smoke;
   tangerine: $tangerine;
   tertiary: $tertiary;
