--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -14,6 +14,7 @@ $cinnabar: rgb(232, 61, 71);
 $fern: rgb(92, 184, 92);
 $sky: rgb(16, 156, 241);
 $tangerine: rgb(229, 114, 0);
+$skyhigh: rgb(206 228 255);
 
 $primary: $scooter;
 $secondary: $pebble;
