Fix: Molecule/Banner use standard scss instead of module scss

--- a/src/assets/_banner.scss
+++ b/src/assets/_banner.scss
@@ -1,6 +1,4 @@
-@import '../../../assets/colors.scss';
-
-.container {
+.gds-banner-container {
   position: relative;
   border-radius: 8px;
   padding: 20px;
