--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -1,6 +1,7 @@
 @import './actionbar';
 @import './amount';
 @import './badge';
+@import './banner';
 @import './button';
 @import './checkbox';
 @import './datapicker';
