--- a/src/Components/Atoms/Modal/Modal.module.scss
+++ b/src/Components/Atoms/Modal/Modal.module.scss
@@ -1,9 +1,9 @@
 .overlay {
   position: fixed;
-  width: 100%;
-  height: 100%;
   top: 0;
+  right: 0;
   left: 0;
+  bottom: 0;
   // This must remain black whatever the theme is.
   background-color: rgba(var(--theme-provider-black), 0.7);
   overflow-x: auto;
@@ -21,7 +21,6 @@
   overflow: auto;
   z-index: auto;
   box-sizing: border-box;
-  max-width: 100%;
 }
 
 .shake {
