Build: bump @fortawesome/fontawesome-svg-core to 6.4.0 Build: bump @szhsin/react-menu to 3.5.2 Build: bump react-collapsed to 4.0.1 Build: bump react-datepicker to 4.11.0 Build: bump react-select to 5.7.2 Build: bump react-textarea-autosize to 8.4.1 Build: bump suneditor to 2.44.6 Build: bump @babel/core to 7.21.4 Build: bump @fortawesome/pro-light-svg-icons to 6.4.0 Build: bump @fortawesome/pro-regular-svg-icons to 6.4.0 Build: bump @fortawesome/pro-solid-svg-icons to 6.4.0 Build: bump @types/react-datepicker to 4.10.0 Build: bump @typescript-eslint/eslint-plugin to 5.57.1 Build: bump @typescript-eslint/parser to 5.57.1 Build: bump autoprefixer to 10.4.14 Build: bump eslint to 8.37.0 Build: bump eslint-config-prettier to 8.8.0 Build: bump eslint-plugin-react to 7.32.2
Feat: Atoms/RichTextInput count html bytes instead of characters when maxCount is defined

--- a/src/Components/Atoms/DatePickerInput/DatePickerInput.module.scss
+++ b/src/Components/Atoms/DatePickerInput/DatePickerInput.module.scss
@@ -486,4 +486,16 @@
   .input-date-picker-input-read-only.highlighted {
     color: rgb(var(--theme-provider-tangerine));
   }
+
+  .react-datepicker__aria-live {
+    position: absolute;
+    clip-path: circle(0);
+    border: 0;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    width: 1px;
+    white-space: nowrap;
+  }
 }
